# riscv-isa-skills

./: .gitignore  .gitmodules  README.md  decode_inst.py  pyproject.toml
docs/: PROJECT_GUIDE_CN.md
docs/superpowers/plans/: 2026-03-26-rr-spike-rv-replay.md  2026-03-27-rrspike-investigate-skill.md
docs/superpowers/specs/: 2026-03-26-rr-spike-rv-replay-design.md
examples/: session-ses_2d0d.md
skills/: rrspike-investigate.md  rrspike-isa-investigation.md
skills/csr-parser/: README.md  SKILL.md  scripts_udb_csr_cli.py  test_mismatch.py
skills/csr-parser/udblib/: parser.py
skills/riscv-inst-decoder/: SKILL.md
skills/riscv-inst-decoder/references/: decode_tree.json
skills/riscv-inst-decoder/scripts/: decode_inst.py
skills/spike-isa-internals/: SKILL.md
skills/spike-isa-internals/references/: SUBAGENT_EVALUATION_CSRR_CASE.md
skills/spike-isa-internals/scripts/rr_spike_rv_replay/: __init__.py  cli.py  goto_entry.py  pipeline.py  preflight.py  spike_log_converter.py  trace_bridge.py
skills/spike-isa-internals/tests/: test_cli_args.py  test_gdb_script_builder.py  test_investigate.py  test_preflight.py  test_replayer.py  test_reporter.py  test_trace_bridge.py
src/rr_spike_rv_replay/: gdb_script_builder.py  investigate.py  isa_events.py  llm_assist.py  locator.py  recorder.py  replayer.py  reporter.py
tests/: decode_regression.md  test_goto_entry.py  test_isa_events.py  test_locator.py  test_pipeline.py  test_recorder.py  test_spike_log_converter.py
