[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rr-spike-rv-replay"
version = "0.1.0"
description = "Core tooling for rr/spike RV replay workflows"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
rrspike = "rr_spike_rv_replay.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
